# camelino

./: -o  .clang-format  .gitignore  BUILD.md  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  Design.md  LICENSE  Makefile.host  PORTING.md  QUICKSTART.md  README.md  TEST.md  Work.md  keywords.txt  library.json  library.properties  platformio.ini  架构.md
.github/workflows/: ci.yml
examples/: README.md
examples/Blink/: Blink.ino
examples/REPL/: REPL.ino
examples/Sensor/: Sensor.ino
examples/arduino/AnalogRead/: AnalogRead.ino  analog_read.ml  build.sh
examples/arduino/Blink/: Blink.ino  blink.ml  build.sh
examples/arduino/SerialHello/: SerialHello.ino  build.sh  serial_hello.ml
examples/host/AllOpcodes/: all_opcodes.ml  build.sh
examples/host/Fib/: build.sh  fib.ml
examples/host/Hello/: build.sh  hello.ml
lib/camelino/: camelino.ml  camelino.mli  dune  dune-project
platform/arduino/: README.md  hal_adapter.c  platform_config.h  port_init.c
platform/host/: BUILD.md  camelino-run.c  hal_adapter.c  platform_config.h  port_init.c
src/: Camelino.cpp  Camelino.h
src/bindings/: analog.c  error.c  gpio.c  serial.c  time.c
src/core/: bytecode.h  byteorder.h  camelino_config.h  error.c  error.h  gc_roots.c  gc_roots.h  memory.c  memory.h  opcodes.h  platform.h  value.c  value.h  vm.c  vm.h
src/ffi/: ffi.c  ffi.h  primitives.c
src/hal/: analog.h  cap.h  err.h  flash.h  gpio.h  interrupt.h  time.h  uart.h
src/repl/: history.c  line_editor.c  repl.c  repl.h
test/: build_all_opcodes.sh  test_all_opcodes.c  test_bytecode.c  test_calls.c  test_embed.c  test_exn.c  test_ffi.c  test_gc.c  test_gc_roots.c  test_globals.c  test_memory.c  test_memory_combined.c  test_opcodes.c  test_phase4.c  test_phase5.c  test_value.c  test_vm.c
tools/: camelino-check.sh  camelino-deploy.sh  camelino-stub.sh  test_stub.c
tools/camelino-check/: dune  dune-project  main.ml
tools/camelino-embed/: camelino-embed  dune  dune-project  main.ml
tools/camelino-repl/: dune  dune-project  main.ml
tools/test_suite/: _c.c  _comb.c  _fcomb.c  _ftest.c  _m2.c  _m3.c  _m3c.c  _manual.c  _mc.c  case01_add.ml  case02_sub.ml  case03_mul.ml  case04_div.ml  case05_if.ml  case06_combo.ml  diff_tests.c  run_all.sh  run_diff.sh  run_diff_full.sh  test_arith_add23.ml
